# thesis

./: .gitignore  Makefile  pyproject.toml  pytest.txt
.github/workflows/: run_test.yml
empiric_data/: 2025-03-18-11-29-28_SSSP_comparison.csv  2025-03-18-11-38-53_SSSP_comparison copy.csv
src/: globals.py
src/fineman/: __init__.py  betweenness_reduction.py  dijkstra.py  elimination_algorithm.py  elimination_by_hop_reduction.py  finemans_algorithm.py  heavy_light_partition.py  helper_functions.py  independent_set_or_crust.py  main.py  preprocessing.py  rand_is.py
src/scripts/: __init__.py  bellman_ford.py  double_tree_graph_generator.py  random_graph_no_neg_cycles_gen.py  synthetic_graph_generator.py  time_algorithms.py  visualize_times.py  weighttest.py
src/tests/: test_betweenness_reduction.py  test_elimination_algorithm.py  test_elimination_by_hop_reduction.py  test_finemans_algorithm.py  test_heavy_light_partition.py  test_helper_functions.py  test_is_or_crust.py  test_preprocessing.py
src/tests/test_data/graphs/: 6_cycle_large_positive_weights.json  8_vertex_cycle_with_large_weights.json  9_vertex_dag_sandwich.json  9_vertex_right_graph.json  disconnected_triangles.json  flow_dag_6_vertices.json  independent_set_cycle_2.json  path_100_with_large_neg_edges.json  path_10_with_large_neg_edges.json  small_alternating_cycle.json  small_grid_3_negative_vertices.json
src/tests/test_scripts/: test_standard_bellmanford.py
src/utils/: cycle_error.py  load_test_case.py  threshold_error.py
