[tool.poetry]
name = "fineman-algorithm"
version = "0.1.0"
description = ""
authors = ["Jakob <73228675+Kobo-coder@users.noreply.github.com>",
           "Isabella <90042116+isabellamagnusdottir@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.3"
networkx = "^3.4.2"
bidict = "^0.23.1"
matplotlib = "^3.10.1"
argparse = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[tool.pytest.ini_options] 
pythonpath = ["src"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
